- Fix for issue 17 - graphic behind chair (image1) was not expanding to full width in larger resolutions. Verified behavior unchanged in smaller resolutions. - Also fixed topbar navigation so on iPad and similar resolutions, more of the link text shows (previously it was truncated).

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3843,7 +3843,7 @@ body.is-ie #sidebar > .inner {
     display: block;
     font-size: 0.6em;
     font-weight: bold;
-    letter-spacing: 0.25em;
+    letter-spacing: 0.2em;
     line-height: 1.75;
     outline: 0;
     padding: 1.35em 0;
@@ -4001,7 +4001,7 @@ div.preloading #sidebar nav ul li {
     background-position: top right;
     padding: 5em 5em 3em 5em;
     max-width: 100%;
-    width: 75em;
+    /*width: 75em;*/
 }
 
     .image1 p {
